Use Google AutoService to generate ServiceLoader files via annotation
Generated at compile time instead of manually writing META-INF/services/* files

--- a/httpclients/httpclient/pom.xml
+++ b/httpclients/httpclient/pom.xml
@@ -58,7 +58,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
         </dependency>
-
+        <dependency>
+            <!-- compile time annotation processor -->
+            <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!-- Test deps -->
         <dependency>
