--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>1.5.3-SNAPSHOT</version>
+    <version>1.6.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -39,7 +39,7 @@
         <jackson.version>2.9.9</jackson.version>
         <snakeyaml.version>1.17</snakeyaml.version>
         <jjwt.version>0.6.0</jjwt.version>
-        <okta.sdk.pereviousVersion>1.4.1</okta.sdk.pereviousVersion>
+        <okta.sdk.previousVersion>1.5.2</okta.sdk.previousVersion>
         <otka.commons.version>1.1.1</otka.commons.version>
 
         <github.slug>okta/okta-sdk-java</github.slug>
@@ -64,27 +64,27 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>1.5.3-SNAPSHOT</version>
+                <version>1.6.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>1.5.3-SNAPSHOT</version>
+                <version>1.6.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-api-swagger-templates</artifactId>
-                <version>1.5.3-SNAPSHOT</version>
+                <version>1.6.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-httpclient</artifactId>
-                <version>1.5.3-SNAPSHOT</version>
+                <version>1.6.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-okhttp</artifactId>
-                <version>1.5.3-SNAPSHOT</version>
+                <version>1.6.0-SNAPSHOT</version>
             </dependency>
 
             <!-- Other Okta Projects -->
@@ -108,14 +108,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>1.5.3-SNAPSHOT</version>
+                <version>1.6.0-SNAPSHOT</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>1.5.3-SNAPSHOT</version>
+                <version>1.6.0-SNAPSHOT</version>
             </dependency>
 
             <!-- Logging -->
@@ -306,7 +306,7 @@
                         <dependency>
                             <groupId>com.okta.sdk</groupId>
                             <artifactId>okta-api-swagger-templates</artifactId>
-                            <version>1.5.3-SNAPSHOT</version>
+                            <version>1.6.0-SNAPSHOT</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -327,7 +327,7 @@
                             <dependency>
                                 <groupId>${project.groupId}</groupId>
                                 <artifactId>${project.artifactId}</artifactId>
-                                <version>${okta.sdk.pereviousVersion}</version>
+                                <version>${okta.sdk.previousVersion}</version>
                                 <type>jar</type>
                             </dependency>
                         </oldVersion>
