--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -27,7 +27,10 @@
     <artifactId>okta-sdk-impl</artifactId>
     <name>Okta Java SDK :: Impl</name>
     <description>
-        TODO
+        The Okta Java SDK core implemenation .jar is used at runtime to support API invocations.  This
+        implementation jar should be a runtime dependency only and should NOT be depended on at compile time by
+        your code.  The implementations within this jar can change at any time without warning - use it with runtime
+        scope only.
     </description>
     <packaging>jar</packaging>
 
