Update to Okta OpenAPI spec 1.11
- Setting header values required significant changes to templates.  Now query and header values are ALWAYS passed to the datastore.
- reformatted a couple templates so I could read them (and still output similar whitespace)
- renamed query*Partial.mustache to param* as they not handle header params too

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -25,7 +25,7 @@ info:
   license:
     name: Apache-2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
-  version: 1.10.0
+  version: 1.11.0
 externalDocs:
   description: Find more info here
   url: 'http://developer.okta.com/docs/api/getting_started/design_principles.html'
@@ -2095,6 +2095,14 @@ paths:
           required: true
           schema:
             $ref: '#/definitions/VerifyFactorRequest'
+        - in: header
+          name: X-Forwarded-For
+          type: string
+          x-okta-added-version: 1.11.0
+        - in: header
+          name: User-Agent
+          type: string
+          x-okta-added-version: 1.11.0
       produces:
         - application/json
       responses:
