--- a/httpclients/httpclient/pom.xml
+++ b/httpclients/httpclient/pom.xml
@@ -28,53 +28,13 @@
     <artifactId>okta-sdk-httpclient</artifactId>
     <name>Okta Java SDK :: Extensions :: HTTP Client</name>
     <description>
-        The Okta Java SDK HTTP Client implementation .jar is used at runtime to make HTTP calls to Okta's
-        REST API using the Apache Http Client library.  This implementation jar should be a runtime dependency only
-        and should NOT be depended on at compile time by your code.  The implementations within this jar can change at
-        any time without warning - use it with runtime scope only.
+        Moved to com.okta.commons:okta-http-httpclient
     </description>
-    <packaging>jar</packaging>
+
     <dependencies>
         <dependency>
-            <groupId>com.okta.sdk</groupId>
-            <artifactId>okta-sdk-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.okta.sdk</groupId>
-            <artifactId>okta-sdk-impl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <!-- Runtime dependency to replace commons-logging needed by HTTPClient: -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-        </dependency>
-        <dependency>
-            <!-- compile time annotation processor -->
-            <groupId>com.google.auto.service</groupId>
-            <artifactId>auto-service</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <!-- Test deps -->
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <scope>test</scope>
+            <groupId>com.okta.commons</groupId>
+            <artifactId>okta-http-httpclient</artifactId>
         </dependency>
     </dependencies>
 
