--- a/httpclients/okhttp/pom.xml
+++ b/httpclients/okhttp/pom.xml
@@ -28,64 +28,14 @@
     <artifactId>okta-sdk-okhttp</artifactId>
     <name>Okta Java SDK :: Extensions :: OkHttp Client</name>
     <description>
-        The Okta Java SDK OK HTTP implementation .jar is used at runtime to make HTTP calls to Okta's
-        REST API using the OkHttp Client library.  This implementation jar should be a runtime dependency only
-        and should NOT be depended on at compile time by your code.  The implementations within this jar can change at
-        any time without warning - use it with runtime scope only.
+        Moved to com.okta.commons:okta-http-okhttp
     </description>
-    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>com.okta.sdk</groupId>
-            <artifactId>okta-sdk-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.okta.sdk</groupId>
-            <artifactId>okta-sdk-impl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.11.0</version>
-        </dependency>
-
-        <dependency>
-            <!-- Required for any libraries that expect to call the commons logging APIs -->
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <!-- compile time annotation processor -->
-            <groupId>com.google.auto.service</groupId>
-            <artifactId>auto-service</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <!-- Test deps -->
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <scope>test</scope>
+            <groupId>com.okta.commons</groupId>
+            <artifactId>okta-http-okhttp</artifactId>
+            <version>${otka.commons.version}</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-             <plugin>
-                <groupId>com.github.siom79.japicmp</groupId>
-                <artifactId>japicmp-maven-plugin</artifactId>
-                <configuration>
-                    <!-- there is no previous version so we must the backwards compatibility scan -->
-                    <skip>true</skip>
-                </configuration>
-             </plugin>
-        </plugins>
-    </build>
 </project>
