--- a/httpclients/httpclient/pom.xml
+++ b/httpclients/httpclient/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
-        <version>1.5.4-SNAPSHOT</version>
+        <version>1.5.4</version>
         <relativePath>../..</relativePath>
     </parent>
 
