--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>1.5.4</version>
+    <version>1.5.5-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -78,27 +78,27 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>1.5.4</version>
+                <version>1.5.5-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>1.5.4</version>
+                <version>1.5.5-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-api-swagger-templates</artifactId>
-                <version>1.5.4</version>
+                <version>1.5.5-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-httpclient</artifactId>
-                <version>1.5.4</version>
+                <version>1.5.5-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-okhttp</artifactId>
-                <version>1.5.4</version>
+                <version>1.5.5-SNAPSHOT</version>
             </dependency>
 
             <!-- Other Okta Projects -->
@@ -122,14 +122,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>1.5.4</version>
+                <version>1.5.5-SNAPSHOT</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>1.5.4</version>
+                <version>1.5.5-SNAPSHOT</version>
             </dependency>
 
             <!-- Logging -->
@@ -293,7 +293,7 @@
                         <dependency>
                             <groupId>com.okta.sdk</groupId>
                             <artifactId>okta-api-swagger-templates</artifactId>
-                            <version>1.5.4</version>
+                            <version>1.5.5-SNAPSHOT</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -401,6 +401,6 @@
     </profiles>
 
   <scm>
-    <tag>okta-sdk-root-1.5.4</tag>
+    <tag>okta-sdk-root-1.5.2</tag>
   </scm>
 </project>
