--- a/pom.xml
+++ b/pom.xml
@@ -67,11 +67,11 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
-            <!-- Once 2.9.9.1 is included in the next version of the jackson-bom, this next dep can be removed -->
+            <!-- Once 2.9.9.x is included in the next version of the jackson-bom, this next dep can be removed -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.9.9.1</version>
+                <version>2.9.9.3</version>
             </dependency>
 
             <!-- Inter project dependencies -->
