Fixed two child properties of LogEvent AuthenticationContext that had been set to array instead of string. (credential provider and credential type).  Changed definition in api.yaml.  Added a new stub file that contains log events with these items populated as observed from a running Okta tenant.  Added to the existing unit test to ensure these two properties are being generated properly.

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -3700,12 +3700,12 @@ definitions:
         items:
           $ref: '#/definitions/LogCredentialProvider'
         readOnly: true
-        type: array
+        type: string
       credentialType:
         items:
           $ref: '#/definitions/LogCredentialType'
         readOnly: true
-        type: array
+        type: string
       externalSessionId:
         readOnly: true
         type: string
