--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,9 @@
         <swagger-annotations.version>1.5.8</swagger-annotations.version>
         <jackson.version>2.10.0</jackson.version>
         <snakeyaml.version>1.25</snakeyaml.version>
-        <jjwt.version>0.10.7</jjwt.version>
+        <bouncycastle.version>1.64</bouncycastle.version>
+        <jjwt.version>0.9.1</jjwt.version>
+        <gson.version>2.8.6</gson.version>
         <okta.sdk.previousVersion>1.5.4</okta.sdk.previousVersion>
         <otka.commons.version>1.2.2</otka.commons.version>
 
@@ -116,6 +118,11 @@
                 <version>${otka.commons.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.okta.commons</groupId>
+                <artifactId>okta-http-okhttp</artifactId>
+                <version>${otka.commons.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
                 <version>1.3.2</version>
@@ -152,6 +159,26 @@
                 <version>1.2.2</version>
             </dependency>
 
+            <!-- Bouncy Castle -->
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcmail-jdk15on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcpkix-jdk15on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+
+            <!-- JJWT -->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
@@ -163,6 +190,14 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+
+            <!-- GSON -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
