--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -46,7 +46,11 @@
         </dependency>
         <dependency>
             <groupId>com.okta.commons</groupId>
-            <artifactId>okta-http-okhttp</artifactId>
+            <artifactId>okta-http-httpclient</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
