--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
                 <artifactId>okta-sdk-okhttp</artifactId>
                 <version>1.6.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>4.4.1</version>
+            </dependency>
 
             <!-- Other Okta Projects -->
             <dependency>
