--- a/api/pom.xml
+++ b/api/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>okta-commons-lang</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
