okta-http-okhttp added with test scope in impl/pom.xml

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>okta-http-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.okta.commons</groupId>
+            <artifactId>okta-http-okhttp</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
