--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ deploy:
 
 notifications:
   slack:
+    if: type = cron
     secure: ivOHHaQvSgTOVi1g/8pvvOigj/gkWdSy23fVTOSejahNO8w6PpVHrVE1mJk29RWFEZlY/xBNqx6Zm0H8XAAVOc12C1tgN2J0RQm4kHXc6t8zMOS5NkuV4V0azP6BdCkcAvBgaks+fx6BYOAzcbHZ7MyV+DrLLmXBQiWFRXL420k=
   on_success: never
   on_failure: always
